New in v1.1.13 (????/??/??)
---------------------------

Warn if can't write extended attribute. (Andrew Ferguson)

Gracefully handle situations where rdiff-backup tries to set the sticky
bit on non-directory files on systems that don't support that action.
Thanks to Jim Nasby for the bug report. (Andrew Ferguson)

Prevent the extended filenames / UTF-8 test from raising an exception
on broken CIFS configurations which transform some characters to '?'.
Problem reported by Luca Cappe. (Andrew Ferguson)

Cygwin on FAT32 hangs when trying to open a file named "aux". Change
the escape DOS devices test to use "con" instead. (Andrew Ferguson)

Fix symlink behavior when filesystem is mounted via CIFS. Closes
Savannah bug #20342. (Andrew Ferguson)

Fix "too many open files" bug when handling large directories. Patch
from Anonymous in Savannah bug #20528.

New options: --tempdir and --remote-tempdir. The first one sets the
directory that rdiff-backup uses for temporary files on the local system.
The second adds the --tempdir option with the given path when invoking
rdiff-backup on remote systems. (Andrew Ferguson)

Don't run the extended attributes test if rdiff-backup is run with
the --no-eas option. Prevents hang in isolated cases. (Andrew Ferguson)

Don't throw an error when clearing extended attributes if they are not
supported on the file. (Andrew Ferguson)


New in v1.1.12 (2007/07/12)
---------------------------

Use .dll as library file extension on Cygwin and Windows. (Andrew Ferguson)

Avoid setting permissions to 000 because they're out of sync. (Andrew Ferguson)

listxattr() can also throw EPERM error if not supported. (Andrew Ferguson)

Do something sensible if we get an IOError while trying to appropriately
log another exception. (Andrew Ferguson)

Handle exception when get permission denied on a file while trying
to establish case sensitivity on read-only side. (Andrew Ferguson)

Finally solve AttributeError due to no 'inc_compressed' attribute